--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,10 @@
-# Backend environment variables
+# Frontend environment variables
 
-# JWT secret key for signing tokens
-JWT_SECRET=change_me_secret
+# Base URL for API (backend)
+VITE_API_URL=http://localhost:5000
 
-# Database (choose one: SQLite default, or Postgres)
-# For SQLite no config needed; DB file at ./data/soulsync.db
-# For Postgres, uncomment and set connection string
-# PG_CONNECTION_STRING=postgres://user:pass@host:5432/dbname
+# Optional: Sentry DSN for frontend monitoring
+# VITE_SENTRY_DSN=https://public@sentry.io/project
 
-# Optional: enable Sentry observability
-# SENTRY_DSN=https://public@sentry.io/project
-
-# Optional: enable feature flags (comma-separated)
-# FEATURE_FLAGS=quantum,optX
-
-# Port to run the backend on
-PORT=5000
-
-
-# Optional basic auth for Swagger UI (/api/docs)
-# BASIC_AUTH_USER=admin
-# BASIC_AUTH_PASS=change_me
+# Optional: Node environment
+NODE_ENV=development
