ci: add smart auto-release (trigger only if commit contains 'release')

--- a/SoulSyncApp/.github/workflows/build-release.yml
+++ b/SoulSyncApp/.github/workflows/build-release.yml
@@ -1,4 +1,4 @@
-name: Build & Release AAB (Self-Healing)
+name: Build & Conditional Release AAB (Smart Auto)
 
 on:
   push:
@@ -37,9 +37,10 @@ jobs:
           path: android/app/build/outputs/bundle/release/*.aab
 
   release:
-    name: Create GitHub Release
+    name: Create GitHub Release (if commit contains "release")
     needs: build
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'release')
 
     steps:
       - name: Download AAB artifact
@@ -48,7 +49,7 @@ jobs:
           name: SoulSyncApp-AAB
           path: release/
 
-      - name: Create Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ github.run_number }}
