--- a/SoulSyncApp/.github/workflows/build-aab.yml
+++ b/SoulSyncApp/.github/workflows/build-aab.yml
@@ -185,3 +185,30 @@ jobs:
           generate_release_notes: true
           body: |
             Automated CI/CD build (AAB) with Gradle cache, versionCode bump and self-healing npm.
+# --- 13. Auto tag + release (universal + safe) ---
+      - name: Auto tag + release (self-healing)
+        if: contains(github.event.head_commit.message, 'release')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "SoulSyncFrequency"
+          git config user.email "soulsyncfrequency@gmail.com"
+          last=$(git describe --tags --abbrev=0 2>/dev/null || echo "v400")
+          num=${last//[!0-9]/}
+          [ -z "$num" ] && num=400
+          next="v$((num+1))"
+          git tag "$next"
+          git push origin "$next"
+
+          echo "🔍 Searching for build artifacts..."
+          FILE=$(find android -type f \( -name "*.aab" -o -name "*.apk" \) | head -n 1 || true)
+
+          if [ -n "$FILE" ]; then
+            echo "✅ Found build artifact: $FILE"
+            gh release create "$next" "$FILE" --notes "Automated Android build and release ($next)"
+          else
+            echo "⚠️ No .aab/.apk found — creating tag only (no file upload)"
+            gh release create "$next" --notes "Tag created automatically (no build artifacts found)"
+          fi
+
+          echo "🚀 Created release $next successfully."
