ci: trigger registration of new workflow (v6.4)

--- a/SoulSyncApp/.github/workflows/build-aab-v6.4.yml
+++ b/SoulSyncApp/.github/workflows/build-aab-v6.4.yml
@@ -91,3 +91,4 @@ jobs:
           name: repaired-app-${{ github.run_number }}
           path: app-release.aab
           retention-days: 3
+# force reindex
