Update .gitignore to exclude sensitive personal files and directories
Added entries to ignore sensitive files and local storage.

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,17 @@ logs
 .DS_Store
 Thumbs.db
 
+
+# ==================================
+# Sensitive and personal files
+.bash_history
+.bashrc
+.gitconfig
+.lesshst
+
+# Exclude SSH keys directory
+.ssh/
+
+# Local storage and logs
+storage/
+.npm/_logs/
